--- a/Redux_Learning/redux_app/package.json
+++ b/Redux_Learning/redux_app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
